--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -268,8 +268,6 @@ html.desktop {
       position: absolute;
       left: 0;
       right: 300px;
-      overflow-y: auto;
-      height: 100%;
     }
 
     .filter-column {
